# wxtris

./: .gitignore  BACKLOG.md  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan.yml
cmake/: Debug.cmake  Release.cmake  compile_flags.templ
src/: CMakeLists.txt  main.cpp
trix/: CMakeLists.txt
trix/include/trix/: blocks.hpp  buttons.hpp  gui.hpp  rand.hpp  rotate.hpp  tetrix.hpp  tetro.hpp  types.hpp  vecs.hpp
trix/src/: blocks.cpp  buttons.cpp  gui.cpp  rand.cpp  tetrix.cpp  tetro.cpp
trix/test/: test_rand.cpp  test_range.cpp  test_rotate.cpp  test_tetro.cpp  test_vecs.cpp
widgets/: CMakeLists.txt
widgets/include/trix/: blocks.hpp  buttons.hpp  gui.hpp  ranges.hpp  types.hpp  vecs.hpp
widgets/src/: blocks.cpp  gui.cpp
widgets/test/: test_types.cpp
wxtris/: CMakeLists.txt
wxtris/include/wxtris/: app.hpp  blocks.hpp  buttons.hpp  main_panel.hpp  score.hpp
wxtris/src/: app.cpp  blocks.cpp  buttons.cpp  main_panel.cpp  score.cpp
